fix(clayui.com): H4 heading shouldn't be covered by nav when linking to it
fix(clayui.com): Lower code-sample-info z-index by 998 shows over nav when scrolling the page

docs(clayui.com): CSS Tooltips remove white-space in tooltip-inner

--- a/clayui.com/src/styles/site/_content-site.scss
+++ b/clayui.com/src/styles/site/_content-site.scss
@@ -9,7 +9,8 @@
 		> h1,
 		.clay-h1,
 		.clay-h2,
-		.clay-h3 {
+		.clay-h3,
+		.clay-h4 {
 			color: $gray-800;
 			font-weight: 600;
 			margin: $base-size 0;
